frontend/test/should_fail/index_exec_edge_fromIndexMultipleFromTo_argument4_mismatch.grg
#using "index_exec_multiple_model.gm"

sequence s()
{
	{ i:set<AEdge>=edgesFromIndexMultipleFromTo(bari, 0, 1, bard, 42.0, "error") }
}
